--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -7,9 +7,9 @@ content:
   first: |
     This licence grants the right to use the digital font in desktop applications, such as graphic design software or word processors. The font can be installed locally on a computer or other electronic device, making it available to any software supporting the font format.
   more: |
-    One of the factors making this topic especially complex is the variety of criteria for defining font usage. Licences are offered at different prices based on particular measuring units. Their values mark the extent and cost of the font licence, outlining use restrictions and defining price scales. The desktop license has the greatest consensus regarding the measurement of font use. There are only three different metrics, all related to the number of potential font users. 
+    One of the factors making this topic especially complex is the variety of criteria for defining font usage. Licences are offered at different prices based on particular measuring units. Their values mark the extent and cost of the font licence, outlining use restrictions and defining price scales. The Desktop license has the greatest consensus regarding the measurement of font use. We have only found 3 different metrics, all related to the number of potential font users. 
     
-    The price range for a single text font in desktop licences varies from €8 to €200, with the gross around 50€. All the prices in the sample are expressed in euros, and when currency conversion was needed, we used the Xe website.
+    The price range for a single text font in desktop licences varies from €8 to €200, with the gross around 50€. All the prices in the sample are expressed in euros, and when currency conversion was needed, we used the [Xe](https://www.xe.com/) website.
 
 chart:
   title: Popular measuring units in desktop licences
