--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -5,7 +5,7 @@ extra: licence
 order: 3a
 content:
   first: |
-    This licence grants the right to use the digital font in desktop applications, such as graphic design software or word processors. The font can be installed locally on a computer or other electronic device, making it available to any software supporting the font format.
+    This licence grants the right to use the digital font in desktop applications, such as graphic design software or word processors. The font can be installed locally on a computer or other electronic device, making it available to any software supporting the font format. Desktop is the most widely used term for this type of licence, but you can also find it under other titles such as Print, Basic, Offline or Creative work.
   more: |
     One of the factors making this topic especially complex is the variety of criteria for defining font usage. Licences are offered at different prices based on particular measuring units. Their values mark the extent and cost of the font licence, outlining use restrictions and defining price scales. The Desktop license has the greatest consensus regarding the measurement of font use. We have only found 3 different metrics, all related to the number of potential font users.
 
