--- a/en/licenses/web.yml
+++ b/en/licenses/web.yml
@@ -11,7 +11,7 @@ content:
 
     Over half of the sample (54%) uses pageviews per month as the measuring unit for web licences. While the number of domains is commonly combined with web traffic, there are a few cases (4) where this is the only metric. Many foundries that track employees, users, or workstations sell web licences as part of a package that includes various uses, providing this metric as a universal reference.
 
-    We find a few temporary licences for  web use, but they are still rare within the sample. Five foundries charge an annual fee, and two offer multiple timeframes. The average price for a text font for the web is similar to desktop, with a wider range peaking at 233€.
+    We find a few temporary licences for web use, but they are still rare in the sample. Five foundries charge an annual fee, and two offer multiple timeframes. The average price for a text font for the web is similar to desktop, with a wider range peaking at 233€.
 
 
 chart:
