--- a/es/licencias/web.yml
+++ b/es/licencias/web.yml
@@ -7,7 +7,7 @@ content:
   first: |
     Este tipo de licencia permite el uso de fuentes en entornos web, facilitando que la tipografía se muestre correctamente en cualquier navegador. Las fuentes se cargan dinámicamente a través de internet y pueden estar alojadas en un servidor propio o el de la fundición. Esta segunda opción genera una relación de dependencia con la función.
   more: |
-    El 76% de la muestra cuantifica el uso web con el tráfico del sitio (páginas vistas o visitantes). Mientras las licencias de escritorio ponen el foco en quién usa la fuente, las licencias web se fijan en quiénes ven, leen o interactúan con la fuente en las páginas web. 
+    El 76% de la muestra cuantifica el uso web midiendo el tráfico del sitio (páginas vistas o visitantes). Mientras las licencias de escritorio ponen el foco en quién usa la fuente, las licencias web se fijan en quiénes ven, leen o interactúan con la fuente en las páginas web. 
     
     Más de la mitad de la muestra (54%) usa el número de páginas vistas al mes como unidad de medida en este tipo de licencia. Y, aunque es habitual encontrar el número de dominios combinado con el tráfico web, hay unos pocos casos (4) en los que esta métrica es la única que se solicita. Muchas de las fundiciones que miden el número de empleados, personas usuarias o puestos de trabajo ofrecen la licencia web dentro de un paquete con distintos usos, utilizando este dato como referencia general. 
     
