--- a/es/licencias/aplicaciones.yml
+++ b/es/licencias/aplicaciones.yml
@@ -5,14 +5,21 @@ extra: licence
 order: 3c
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    Esta licencia permite utilizar una fuente digital en aplicaciones, garantizando que la tipografía pueda mostrar su contenido. En la mayoría de casos, es necesario leer el EULA para averiguar si la licencia cubre aplicaciones de escritorio o si se limita a dispositivos móviles. Las fuentes se incrustan en la app y se cargan el su interfaz.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    La licencia para aplicaciones se ofrece a veces como App/ePub o App/Videojuego. Las fundiciones que tienen una licencia específica para videojuegos usan métricas y precios similares a los de las licencias App, así que las hemos metido en el mismo bloque.
+    
+    Hay una clara unidad de medida predominante en esta licencia, el número de aplicaciones que incluirán la fuente. Preferimos el término genérico «caso de uso» para poder utilizarlo diferentes licencias. Otras métricas hacen referencia a quiénes ven/leen/interactúan con la aplicación (descargas y usuarias mensuales), pero, en este caso, el porcentaje de la muestra es menor (19%) que en licencias web.
+    
+    También hemos identificado fundiciones que utilizan el número de años como la única métrica en esta licencia. La muestra incluye más licencias no perpetuas en applicaciones que en otros usos, siete fundiciones cobran una subscripción anual y ocho imponen límites temporales.
+    
+    El coste de una licencia para aplicaciones es a menudo más alto que para web o escritorio, doblando o incluso multiplicando por diez el precio base. Sin embargo, algunas fundiciones mantienen la misma tarifa básica. Este escenario presenta un rango bastante amplio de precios, con el grueso concentrado por debajo de los 250€ por una fuente de texto.
+
 
 chart:
-  title: Popular measuring units in app licences
+  title: Unidades de medida en licencias de applicaciones
   key: app
 
 pricing:
-  title: Pricing in app licences
+  title: Precios en licencias de applicaciones
   key: app-pricing
