--- a/es/licencias/aplicaciones.yml
+++ b/es/licencias/aplicaciones.yml
@@ -7,7 +7,7 @@ content:
   first: |
     Esta licencia permite utilizar una fuente digital en aplicaciones, garantizando que la tipografía pueda mostrar su contenido. En la mayoría de casos, es necesario leer el EULA para averiguar si la licencia cubre aplicaciones de escritorio o si se limita a dispositivos móviles. Las fuentes se incrustan en la app y se cargan el su interfaz.
   more: |
-    La licencia para aplicaciones se ofrece a veces como App/ePub o App/Videojuego. Las fundiciones que tienen una licencia específica para videojuegos usan métricas y precios similares a los de las licencias App, así que las hemos metido en el mismo bloque.
+    La licencia para aplicaciones se ofrece a veces como App/ePub o App/Videojuego. Las fundiciones con una licencia específica para videojuegos usan métricas y precios similares a los de las licencias App, así que las hemos metido en el mismo bloque.
     
     Hay una clara unidad de medida predominante en esta licencia, el número de aplicaciones que incluirán la fuente. Preferimos el término genérico «caso de uso» para poder utilizarlo diferentes licencias. Otras métricas hacen referencia a quiénes ven/leen/interactúan con la aplicación (descargas y usuarias mensuales), pero, en este caso, el porcentaje de la muestra es menor (19%) que en licencias web.
     
