--- a/es/licencias/epub.yml
+++ b/es/licencias/epub.yml
@@ -7,7 +7,7 @@ content:
   first: |
     Esta es la licencia para usar fuentes digitales en libros electrónicos (eBooks), generalmente distribuidos en formato ePub, .mobi y formatos similares. La fuente se incrusta en publicaciones digitales que se leerán en dispositivos como lectores electrónicos, tabletas y aplicaciones de lectura para teléfonos móviles y ordenadores.
   more: |
-    Case una tercera parte de la licencias analizadas para ePub miden el número de «casos de uso» (títulos). Tan solo tres definen sus licencias en función del número de años. Otras métricas genéricas (usuarias, puestos de trabajo, personas empleadas) forman parte de paquetes de licencias que combinas varios usos. También hemos encontrado aquí tres ejemplos de fundiciones que cobran una tarifa anual por el uso en publicaciones electrónicas.
+    Casi una tercera parte de la licencias analizadas para ePub miden el número de «casos de uso» (títulos). Tan solo tres determinan el uso por número de años. Otras métricas generales (usuarias, puestos de trabajo, personas empleadas) forman parte de paquetes de licencias combinadas. Hemos encontrado también tres ejemplos de fundiciones que cobran una subscripción por el uso en publicaciones electrónicas.
 
     En muchos casos el uso de una fuente en libros electrónicos está incluído en las licencia de escritorio, ya que se se considera un uso similar a la incrustación en documentos PDF. El rango de precios en ePub sigue siendo amplio y, aunque la muestra es más pequeña que la de aplicaciones, la tendencia presenta un coste más bajo.
 
