--- a/es/licencias/servidor.yml
+++ b/es/licencias/servidor.yml
@@ -5,9 +5,14 @@ extra: licence
 order: 3e
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    Los derechos de uso en esta licencia varían de una fundición a otra. En general, se refiere al uso en aplicaciones digitales que operan desde un servidor, por ejemplo plataformas que generan texto o gráficas en tiempo real. Sin embargo, también hemos encontrado casos en los que se habla del servidor local de una compañía, para permitir el uso de la fuente a su plantilla.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    La licencia OEM (Fabricante de Equipamiento Original) también permite la creación de contenido dinámico, ya que las fuentes van incrustadas en el sistema operativo de los dispositivos. En este caso no es necesaria la conexión a un servidor para acceder a la fuente.
+
+    Esta mezcla de referencias y usos presenta una licencia especialmente compleja. Mientras recopilamos los datos, hemos visto como esta licencia desaparecía de la lista de opciones para venta directa en siete de las fundiciones de la muestra.
+    
+    Su precio se mide principalmente por el número de servidores. Una fundición que mide el número de usuarias ofrece su licencia para servidores locales. En una muestra de 19 fundiciones, los precios van desde los 92€ a los 1.440€ por una tipografía para texto en su licencia más baja. Aún así, en muchos casos no es fácil saber a qué tipo de servidor hacen referencia, por lo que es difícil determinar una tendencia.
+
 
 chart:
   title: Popular measuring units in server licences
