--- a/en/licenses/server.yml
+++ b/en/licenses/server.yml
@@ -7,7 +7,7 @@ content:
   first: |
     The rights of use in this licence vary from one foundry to another. It generally refers to the use in digital applications that operate from a server, such as platforms that use fonts to generate text or graphics in real time. However, we have also found cases where rights refer to a company's local server, enabling internal use by its employees.
   more: |    
-    This confusing mix of references and uses results in a particularly complicated licence for foundries and users. In fact, we’ve witnessed seven foundries in the sample removing this licence from direct sales.
+    This confusing mix of references and types of server results in a particularly complicated licence for foundries and users. In fact, we’ve witnessed seven foundries in the sample removing this licence from direct sales.
 
     The price is mainly based on the number of servers. One foundry that measures the number of users offers the licence for company servers. In a small sample of 19 foundries, prices range from 92€ to 1.440€ for one text font in the lowest licence tier. Still, some are unclear about what kind of server they refer to, so it is difficult to identify a trend.
 
