--- a/es/licencias/servidor.yml
+++ b/es/licencias/servidor.yml
@@ -7,7 +7,7 @@ content:
   first: |
     Los derechos de uso en esta licencia varían de una fundición a otra. En general, se refiere al uso en aplicaciones digitales que operan desde un servidor, por ejemplo plataformas que generan texto o gráficas en tiempo real. Sin embargo, también hemos encontrado casos en los que se habla del servidor local de una compañía, para permitir el uso de la fuente a su plantilla.
   more: |
-    Esta mezcla de referencias y tipos de servidor presenta una licencia especialmente confusa. Mientras recopilabamos los datos, presenciamos la desaparición de esta licencia en la lista de opciones para venta directa en siete de las fundiciones de la muestra.
+    Esta mezcla de referencias y tipos de servidor presenta una licencia especialmente confusa para fundiciones y usuarias. Mientras recopilabamos los datos, presenciamos la desaparición de esta licencia en la lista de opciones para venta directa en siete de las fundiciones de la muestra.
     
     Su precio se mide principalmente por el número de servidores. Una fundición que mide el número de usuarias ofrece su licencia para servidores locales. En una muestra de 19 fundiciones, los precios van desde los 92€ a los 1.440€ por una tipografía para texto en su licencia más baja. Aún así, en muchos casos no es fácil saber a qué tipo de servidor hacen referencia, por lo que es difícil determinar una tendencia.
 
