--- a/en/licenses/broadcasting.yml
+++ b/en/licenses/broadcasting.yml
@@ -5,9 +5,14 @@ extra: licence
 order: 3f
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    This licence is for using the fonts in audiovisual material for transmission in mass media, like TV, cinema, streaming and on-demand content platforms. Specifically, the fonts can be used for graphics, titles and other typographic elements in advertising, films, or entertainment content.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    The confusion here comes from how and where the video productions will be distributed. Some broadcasting licences include two types of video content and distribution channels: videos displayed and/or streamed in mass media, on one side, and paid advertisement, on the other side, which also includes platforms and formats such as social media or digital billboards. Some foundries differentiate broadcast content from advertising, so we need to double-check the EULA to know about rights and restrictions. The foundries that only include paid advertising in their video licences are not included in this analysis; they often measure font use by number of impressions and may be included in the future as a separate licence.
+
+    It is interesting to note the variety of options for measuring broadcasting licences. After ‘use case’ (number of productions), we also find metrics that measure economic factors or geographic scope, such as the number of countries where the production will be seen or the budget for the project. 
+
+    Two foundries charge an annual fee for broadcast productions. Prices range from base costs below 200€ to some of the highest licences in our database.
+
 
 chart:
   title: Popular measuring units in broadcasting licences
