--- a/es/licencias/broadcasting.yml
+++ b/es/licencias/broadcasting.yml
@@ -15,7 +15,7 @@ content:
 
 
 chart:
-  title: Unidade de medida en licencias de retransmisión
+  title: Unidades de medida en licencias de retransmisión
   key: broadcasting
 
 pricing:
