--- a/en/licenses/social-media.yml
+++ b/en/licenses/social-media.yml
@@ -5,9 +5,14 @@ extra: licence
 order: 3g
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    A social media licence allows for using a font in content created and published on social media platforms, including Instagram, Facebook, TikTok, and more. 
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    The font can be seen in formats such as static images or videos, although some foundries use a separate licence for video content. For advertising or paid content, a few offer another licence measured by the number of impressions.
+
+    As in other cases, this particular use is often included in basic licences or integrated into a licence pack. Still, some foundries and designers follow a different strategy, segregating the license to more specific uses like Social Media, Logotype, or Digital Ads.
+
+    The pricing tiers are calculated mainly by the number of followers or subscribers across all the social media channels, starting at 10.000. The median price for a single text font in a sample of 18 foundries is 66€; a bit higher but not too far from the average price for desktop and web licences.
+
 
 chart:
   title: Popular measuring units in social media licences
