--- a/en/licenses/corporate.yml
+++ b/en/licenses/corporate.yml
@@ -5,9 +5,11 @@ extra: licence
 order: 3h
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    This licence is intended to use the fonts across multiple formats and media. It is for companies, brands and organisations that want to cover a range of uses, from printed documents to websites, apps, or advertising.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    Unlike other licenses, it usually allows unlimited devices and users within the organisation. Some set the price depending on the number of employees, and some don’t specify a limit in their purchase process, setting the restrictions in their EULAs.
+    
+    While the most common licenses (Desktop, Web, App, ePub) generally have comparable prices, less common licenses show significant differences. The corporate license presents the highest prices in the sample since it covers extensive font use. The average cost is 870€ for one text font in the lowest tier. The sample in this case is small (13), and one foundry was not included in the pricing graphic since the fee (8.900€) deviates too much from the others.
 
 chart:
   title: Popular measuring units in corporate licences
