--- a/en/licenses/logotype.yml
+++ b/en/licenses/logotype.yml
@@ -5,9 +5,12 @@ extra: licence
 order: 3i
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    This licence is tailored to permit the use of a digital font in a logotype or a trademark. Once created, the vector or bitmap image of the logo can be used in any media (websites, printed material, packaging, advertising, signage…).
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    This use is mostly included in desktop licences. The few foundries that offer a logotype licence (13) either measure the company’s size by the number of employees or ask for ‘use cases’ (number of logotypes), which can sometimes be segregated as logotype and trademark.
+    
+    The price for a single text font ranges from the lowest 29€ to the highest above 400€.
+
 
 chart:
   title: Popular measuring units in logotype licences
