--- a/es/licencias/logotipo.yml
+++ b/es/licencias/logotipo.yml
@@ -7,7 +7,7 @@ content:
   first: |
     Esta licencia está diseñada para permitir el uso de una fuente digital en la creación de un logotipo o marca registrada. Una vez creado, la imagen vectorial o rasterizada del logo puede utilzarse en distintos soportes (sitios web, material impreso, embalaje, publicidad, señalización…).
   more: |
-    Este uso está mayoritariamente incluido en licencias de escritorio. Las pocas fundiciones que ofrecen licencias de logotipo (13) miden el coste en función del tamaño de la compañía, según el tamaño de su plantilla, o cuantifican los ‘casos de uso’ (número de logotipos), diferenciando a veces entre logotipos o marcas registradas.
+    Este uso está mayoritariamente incluido en licencias de escritorio. Las pocas fundiciones que ofrecen licencias de logotipo (13) miden el coste en función del tamaño de la compañía, según el tamaño de su plantilla, o cuantifican los ‘casos de uso’ (número de logotipos), diferenciando a veces entre logotipos y marcas registradas.
     
     El coste de una fuente de texto va desde los 29€ del precio más bajo al más alto por encima de los 400€.
 
