--- a/en/licenses/digital-ads.yml
+++ b/en/licenses/digital-ads.yml
@@ -5,9 +5,12 @@ extra: licence
 order: 3j
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    This licence is for using the fonts online in digital advertising content published on websites, apps and other platforms connected to the internet. It includes banners, video ads, and other advertising formats.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    Most of the metrics in licenses for online use (web, digital ads, social media) measure the audience, using different terms in each case. The predominant measuring unit in digital ads is the number of impressions, which can be counted monthly or as a total sum with no particular timeframe.
+    
+    This is the smallest sample in our database (11), and—not counting the two foundries that charge an annual fee—the average price for one text font is 65€, similar to social media. One exceptional case charges above 2.000€ for digital ads plus social media, including unlimited use for a single brand.
+
 
 chart:
   title: Popular measuring units in digital ads licences
