--- a/es/licencias/publicidad-digital.yml
+++ b/es/licencias/publicidad-digital.yml
@@ -5,14 +5,17 @@ extra: licence
 order: 3j
 content:
   first: |
-    With independent, we mean that they offer their fonts on their own websites. Distribution platforms or websites are not considered in the research. The database includes foundries and designers of various sizes and from different locations, trying to cover as many countries as possible. Ideally, we include 5 examples per country, with a maximum limit of 10 in countries with a larger number of foundries and designers.
+    Es un tipo de licencia para utilizar una fuente digital en contenido publicitario publicado en páginas web, aplicaciones, o cualquier otra plataforma conectada a internet. Incluye báners, anuncios en video y otros formatos publicitarios.
   more: |
-    The research is centered on the Latin Script, although some foundries and designers offer multiscript fonts. The sample consists of 154 entries from 44 different countries, and it is distributed as follows:
+    La mayoría de las métricas en licencias para uso online (web, publicidad digital, redes sociales) miden la audiencia, usando términos diferentes en cada caso. La unidad de medida predominante en publicidad digital es el número de impresiones, que algunas fundiciones cuentan por mes y otras con el total sin definir un periodo de tiempo.
+    
+    Esta el la muestra más pequeña de nuestra base de datos (11), y —excluyendo las dos fundiciones que cobran una tarifa anual— el coste medio para una tipografía de texto es 65€, similar a la media en redes sociales. Hay un caso excepcional que cobra más de 2.000€ por publicidad digital y redes sociales, aunque en este caso el uso es ilimitado para una única marca.
+    
 
 chart:
-  title: Popular measuring units in digital ads licences
+  title: Unidades de medida en licencias de publicidad digital
   key: digital-ads
 
 pricing:
-  title: Pricing in digital ads licences
+  title: Precios en licencias de publicidad digital
   key: digital-ads-pricing
