--- a/es/licencias/publicidad-digital.yml
+++ b/es/licencias/publicidad-digital.yml
@@ -7,9 +7,9 @@ content:
   first: |
     Es un tipo de licencia para utilizar una fuente digital en contenido publicitario publicado en páginas web, aplicaciones, o cualquier otra plataforma conectada a internet. Incluye báners, anuncios en video y otros formatos publicitarios.
   more: |
-    La mayoría de las métricas en licencias para uso online (web, publicidad digital, redes sociales) miden la audiencia, usando términos diferentes en cada caso. La unidad de medida predominante en publicidad digital es el número de impresiones, que algunas fundiciones cuentan por mes y otras con el total sin definir un periodo de tiempo.
+    La mayoría de métricas en licencias para uso online (web, publicidad digital, redes sociales) miden la audiencia, usando términos diferentes en cada caso. La unidad de medida predominante en anuncios digitales es el número de impresiones, que pueden contabilizarse por mes o con la suma total sin plazo temporal.
     
-    Esta el la muestra más pequeña de nuestra base de datos (11), y —excluyendo las dos fundiciones que cobran una tarifa anual— el coste medio para una tipografía de texto es 65€, similar a la media en redes sociales. Hay un caso excepcional que cobra más de 2.000€ por publicidad digital y redes sociales, aunque en este caso el uso es ilimitado para una única marca.
+    Esta el la muestra más pequeña de nuestra base de datos (11). Excluyendo las dos fundiciones que cobran una tarifa anual, el coste medio para una tipografía de texto es 65€, similar a redes sociales. Hay un caso excepcional que cobra más de 2.000€ por publicidad digital y redes sociales, aunque en este caso el uso es ilimitado para una única marca.
     
 
 chart:
