--- a/en/resources.yml
+++ b/en/resources.yml
@@ -11,8 +11,8 @@ resources:
     url: "https://www.notion.so/1d69824c60a180c1b4dbd7e63685f971?v=1d69824c60a18196a279000c0e64b95f&pvs=4"
   - title: Map of independent foundries
     description: The independent type industry in a worldwide map that exhibits patterns by regions and identifies areas with less representation.
-    type: url
-    URL: "https://www.google.com/maps/d/edit?hl=es&mid=1br9CtuDyDHGh7I0HIjcrVp6nmp3jgAo&ll=3.4954369849734235%2C0&z=2"
+    type: fontlicensingmess
+    url: "https://www.google.com/maps/d/edit?hl=es&mid=1br9CtuDyDHGh7I0HIjcrVp6nmp3jgAo&ll=3.4954369849734235%2C0&z=2"
   - title: Other sources and publications
     description: A collection of external resources, including links to articles, surveys, legal advice, and other content focused on the topic.
     type: url
